Change to MainActivity layout New icons Test functionality for signin, signup and forgot password activities

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:text="We just need your register e-mail ID to send reset link" />
+        android:text="We just need your register e-mail ID to send you the reset link" />
 
     <android.support.design.widget.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -70,7 +70,7 @@
         android:layout_marginRight="30dp">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/textEmail"
+            android:id="@+id/inputEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="E-mail*"
@@ -78,11 +78,13 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/btnsignIn"
+        android:id="@+id/btn_resetPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        android:background="@drawable/gradiant_bar"
+        android:background="@drawable/gradiant_bar_disabled"
+        android:enabled="false"
+        android:onClick="resetPassword"
         android:text="Reset Password"
         android:textColor="@android:color/white"
         android:textStyle="bold" />
