--- a/app/src/main/res/drawable/button_styles.xml
+++ b/app/src/main/res/drawable/button_styles.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle" >
 
     <solid android:color="#FFFFFF" />
-
+    <corners android:radius="5dp" />
     <stroke
         android:width="3dp"
-        android:color="#000000" />
+        android:color="#888888" />
 
 </shape>
