--- a/app/src/main/res/layout/activity_appointments.xml
+++ b/app/src/main/res/layout/activity_appointments.xml
@@ -3,26 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="8dp"
+    android:paddingTop="8dp"
+    android:paddingRight="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
         android:orientation="horizontal"
-        android:weightSum="0">
+        android:weightSum="7">
 
         <ImageButton
             android:id="@+id/imageButton"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@drawable/button"
-            android:onClick="previousProfile"
             android:contentDescription="@string/left_arrow"
+            android:onClick="previousProfile"
+            android:paddingLeft="5dp"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
@@ -30,25 +33,27 @@
             android:layout_width="8dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="2"
+            android:layout_weight="4"
             android:gravity="center" />
 
         <LinearLayout
             android:id="@+id/circlePlace"
             android:layout_width="10dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:orientation="horizontal"></LinearLayout>
+            android:orientation="vertical" />
 
         <ImageButton
             android:id="@+id/imageButton2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@drawable/button"
-            android:onClick="nextProfile"
             android:contentDescription="@string/right_arrow"
+            android:onClick="nextProfile"
+            android:paddingLeft="5dp"
             app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />
 
     </LinearLayout>
@@ -62,7 +67,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="148dp" />
+        android:layout_marginLeft="8dp"/>
 
 </LinearLayout>
