--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -39,44 +40,66 @@
                 android:textColor="#fff" />
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
-        android:paddingTop="30dp"
-        android:paddingBottom="10dp"
-        android:weightSum="3">
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp">
 
-        <ImageButton
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_weight="1"
+        <LinearLayout
+            android:layout_width="142dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="25dp"
             android:background="@drawable/button_styles"
-            android:contentDescription="@string/btn_toEmergency"
-            android:onClick="changeToFindDoctors"
-            android:padding="10dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/doctoricon" />
+            android:onClick="changeToFindVaccine"
+            android:orientation="vertical"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <ImageView
+                android:layout_width="95dp"
+                android:layout_height="105dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/vaccine_icon" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Find Vaccine"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
 
         <Space
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_width="25dp"
+            android:layout_height="match_parent" />
 
-        <ImageButton
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_weight="1"
+        <LinearLayout
+            android:layout_width="142dp"
+            android:layout_height="match_parent"
             android:background="@drawable/button_styles"
-            android:contentDescription="@string/btn_toMedicalshop"
-            android:onClick="changeToHospitals"
-            android:padding="10dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/hospitalicon" />
+            android:onClick="changeToHealthStates"
+            android:orientation="vertical"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <ImageView
+                android:layout_width="95dp"
+                android:layout_height="105dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/appointmenticon" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Health States"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -84,39 +107,60 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:weightSum="3">
+        android:paddingBottom="10dp">
 
-        <ImageButton
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_styles"
-            android:contentDescription="@string/btn_toEmergency"
-            android:onClick="changeToHistorical"
-            android:padding="10dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/medicalkiticon" />
-
-        <Space
-            android:layout_width="60dp"
+        <LinearLayout
+            android:layout_width="142dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
-
-        <ImageButton
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_weight="1"
+            android:layout_marginLeft="25dp"
             android:background="@drawable/button_styles"
-            android:contentDescription="@string/btn_toMedicalshop"
             android:onClick="changeToAppointment"
-            android:padding="10dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/appointmenticon" />
+            android:orientation="vertical"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <ImageView
+                android:layout_width="95dp"
+                android:layout_height="105dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/calendar_icon" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Appointments"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+        <Space
+            android:layout_width="25dp"
+            android:layout_height="match_parent" />
+
+        <LinearLayout
+            android:layout_width="142dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/button_styles"
+            android:onClick="changeToScheduler"
+            android:orientation="vertical"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="95dp"
+                android:layout_height="105dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/clock_icon" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Scheduler"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -124,38 +168,60 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingTop="10dp"
-        android:weightSum="3">
+        android:paddingBottom="10dp">
 
-        <ImageButton
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_weight="1"
+        <LinearLayout
+            android:layout_width="142dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="25dp"
             android:background="@drawable/button_styles"
-            android:contentDescription="@string/btn_toEmergency"
-            android:onClick="changeToEmergency"
-            android:padding="10dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/ambulanceicon" />
+            android:onClick="changeToFindDoctors"
+            android:orientation="vertical"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="95dp"
+                android:layout_height="105dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/doctoricon" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Find Doctor"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
 
         <Space
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_width="25dp"
+            android:layout_height="match_parent" />
 
-        <ImageButton
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_weight="1"
+        <LinearLayout
+            android:layout_width="142dp"
+            android:layout_height="match_parent"
             android:background="@drawable/button_styles"
-            android:contentDescription="@string/btn_toMedicalshop"
-            android:onClick="changeToMedicalShop"
-            android:padding="10dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/medicalshopicon" />
+            android:onClick="changeToFindHospitals"
+            android:orientation="vertical"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <ImageView
+                android:layout_width="95dp"
+                android:layout_height="105dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/hospitalicon" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Find Hospital"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <android.support.constraint.ConstraintLayout
