--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -61,7 +61,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
             android:text="Sign up"
-            android:textColor="@color/colorend"
+            android:textColor="@color/colorAccent"
             android:textSize="30sp" />
 
         <android.support.design.widget.TextInputLayout
@@ -69,9 +69,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
-            app:boxStrokeColor="@color/colorend">
+            app:boxStrokeColor="@color/colorAccent">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/inputName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Name *" />
@@ -84,6 +85,7 @@
             android:layout_marginBottom="12dp">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/inputEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="E-mail *"
@@ -97,6 +99,7 @@
             android:layout_marginBottom="12dp">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/inputTelephone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Mobile Number"
@@ -110,6 +113,7 @@
             android:layout_marginBottom="12dp">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/inputPassword1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Password *"
@@ -123,6 +127,7 @@
             android:layout_marginBottom="12dp">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/inputPassword2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Confirm Password *"
@@ -150,11 +155,12 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnSignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/gradiant_bar"
-            android:text="Reset Password"
+            android:onClick="signUp"
+            android:text="Sign up"
             android:textColor="@android:color/white" />
 
     </LinearLayout>
