--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -81,6 +81,7 @@
         android:layout_marginBottom="30dp">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/textpass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password*"
