--- a/app/src/main/res/layout/activity_profiles_list.xml
+++ b/app/src/main/res/layout/activity_profiles_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -38,8 +39,22 @@
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:textColor="#fff" />
 
+            <Button
+                android:layout_width="10dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="100dp"
+                android:layout_weight="1"
+                android:background="@drawable/ic_add_black_24dp" />
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
+
+    <ListView
+        android:id="@+id/listview_profiles"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:maxHeight="500dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -55,5 +70,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/bottom_navigation" />
+
     </android.support.constraint.ConstraintLayout>
+
 </LinearLayout>
