--- a/app/src/main/res/drawable/profile_info_background.xml
+++ b/app/src/main/res/drawable/profile_info_background.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<item android:top="30dp">
+    <shape>
+        android:shape="rectangle" >
 
-    <solid android:color="#FFFFFF" />
-    <corners android:radius="10dp" />
+        <solid android:color="#FFFFFF" />
+        <corners android:radius="10dp" />
 
-</shape>
+    </shape>
+</item>
+</layer-list>
