Profile reminders listview layout and funtionality

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradiant_bar_vertical"
     android:orientation="vertical"
-    android:paddingTop="25dp"
+    android:paddingTop="5dp"
     android:visibility="visible">
 
     <TextView
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="15dp"
         android:background="@drawable/profile_info_background"
         android:orientation="vertical"
@@ -40,27 +40,31 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="15dp"
             android:text="@string/reminders"
             android:textSize="20sp" />
 
         <ListView
-            android:id="@+id/listInformation"
+            android:id="@+id/listReminders"
             android:layout_width="match_parent"
             android:layout_height="230dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/button_styles">
-        </ListView>
+            android:background="@drawable/button_styles"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"></ListView>
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/button_styles"
+            android:clickable="true"
+            android:onClick="changeToTimeline"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView8"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="4dp"
@@ -89,11 +93,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:background="@drawable/button_styles"
+            android:clickable="true"
+            android:onClick="changeToProfileInfo"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView8"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="4dp"
@@ -119,33 +125,44 @@
                 app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />
         </LinearLayout>
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
             <ImageButton
                 android:id="@+id/buttonLeft"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/gradiant_bar"
-                app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />
+                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal"></LinearLayout>
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/buttonRight"
+                app:layout_constraintStart_toEndOf="@+id/buttonLeft"></LinearLayout>
 
             <ImageButton
                 android:id="@+id/buttonRight"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/gradiant_bar"
-                app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />
+                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-        </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
 
