--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -68,7 +68,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="4dp"
-                app:srcCompat="@drawable/clock_icon" />
+                app:srcCompat="@drawable/Timeline" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -103,7 +103,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="4dp"
-                app:srcCompat="@drawable/clock_icon" />
+                app:srcCompat="@drawable/Profile_Information" />
 
             <TextView
                 android:layout_width="wrap_content"
