--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -135,9 +135,9 @@
                 android:layout_height="40dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/gradiant_bar"
-                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                tools:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -158,7 +158,6 @@
                 android:layout_height="40dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/gradiant_bar"
-                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
