--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,17 +10,17 @@
     android:visibility="visible">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Max Mustermann"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="176dp"
         tools:layout_editor_absoluteY="39dp" />
 
     <LinearLayout
+        android:id="@+id/layoutProfile"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="15dp"
@@ -32,7 +32,7 @@
         android:paddingRight="10dp">
 
         <ImageView
-            android:id="@+id/imageProfile"
+            android:id="@+id/imgProfile"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             app:srcCompat="@drawable/doctoricon" />
@@ -66,9 +66,12 @@
 
             <ImageView
                 android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="4dp"
-                app:srcCompat="@drawable/Timeline" />
+                android:layout_height="40dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="9dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginBottom="9dp"
+                app:srcCompat="@drawable/timeline" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -103,7 +106,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="4dp"
-                app:srcCompat="@drawable/Profile_Information" />
+                app:srcCompat="@drawable/profile_information" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -135,6 +138,8 @@
                 android:layout_height="40dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/gradiant_bar"
+                android:onClick="previousProfile"
+                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
@@ -158,6 +163,8 @@
                 android:layout_height="40dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/gradiant_bar"
+                android:onClick="nextProfile"
+                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
