--- a/app/src/main/res/layout/activity_profile_info.xml
+++ b/app/src/main/res/layout/activity_profile_info.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradiant_bar_vertical"
     android:orientation="vertical"
-    android:paddingTop="25dp"
+    android:paddingTop="5dp"
     android:visibility="visible">
 
     <TextView
@@ -24,18 +24,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="15dp"
         android:background="@drawable/profile_info_background"
         android:orientation="vertical"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
 
-        <ImageView
-            android:id="@+id/imageProfile"
+        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/imgProfile"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            app:srcCompat="@drawable/doctoricon" />
+            android:scaleType="centerInside"
+            android:src="@drawable/doctoricon"
+            app:riv_border_color="#333333"
+            app:riv_border_width="2dip"
+            app:riv_corner_radius="30dip"
+            app:riv_mutate_background="true"
+            app:riv_oval="true"
+            app:riv_tile_mode="repeat" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,7 +62,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
+                    android:paddingStart="10dp"
                     android:paddingTop="10dp"
+                    android:paddingEnd="10dp"
                     android:text="Age"
                     android:textStyle="bold" />
 
@@ -124,9 +133,11 @@
         <ListView
             android:id="@+id/listInformation"
             android:layout_width="match_parent"
-            android:layout_height="230dp"
+            android:layout_height="250dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/button_styles" />
+            android:background="@drawable/button_styles"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp" />
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
