--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -40,16 +40,21 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="TimeLine"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:text="@string/timeline"
+            android:textColor="@android:color/black"
             android:textSize="20sp" />
 
 
-        <LinearLayout
+        <ListView
+            android:id="@+id/listTimeline"
             android:layout_width="match_parent"
-            android:layout_height="389dp"
-            android:orientation="vertical"
-            android:background="@drawable/button_styles"/>
+            android:layout_height="350dp"
+            android:background="@drawable/button_styles"
+            android:paddingTop="4dp"
+            android:paddingRight="4dp"
+            android:paddingBottom="4dp" />
 
 
         <android.support.constraint.ConstraintLayout
@@ -62,6 +67,7 @@
                 android:layout_height="40dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/gradiant_bar"
+                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
@@ -82,6 +88,7 @@
                 android:layout_height="40dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/gradiant_bar"
+                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
