Changes in: Buttons drawables Class model functions New layouts and drawables for appointments creation

--- a/app/src/main/res/drawable/gradient_bar_pressed.xml
+++ b/app/src/main/res/drawable/gradient_bar_pressed.xml
@@ -6,9 +6,8 @@
 
     <gradient
         android:angle="45"
-        android:endColor="@color/colorend_disabled"
-        android:startColor="@color/colorstr_disabled"
+        android:endColor="@color/colorend_pressed"
+        android:startColor="@color/colorstr_pressed"
         android:type="linear" />
 
 </shape>
-
