--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -10,17 +10,17 @@
     android:visibility="visible">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Max Mustermann"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="176dp"
         tools:layout_editor_absoluteY="39dp" />
 
     <LinearLayout
+        android:id="@+id/layoutProfile"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="15dp"
@@ -52,6 +52,8 @@
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:background="@drawable/button_styles"
+            android:divider="@null"
+            android:dividerHeight="0dp"
             android:paddingTop="4dp"
             android:paddingRight="4dp"
             android:paddingBottom="4dp" />
@@ -62,11 +64,12 @@
             android:layout_height="match_parent">
 
             <ImageButton
-                android:id="@+id/buttonLeft"
+                android:id="@+id/buttonPrev"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/gradiant_bar"
+                android:background="@drawable/button_gradient"
+                android:onClick="previousProfile"
                 android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -77,17 +80,18 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="@+id/buttonRight"
-                app:layout_constraintEnd_toStartOf="@+id/buttonRight"
+                app:layout_constraintBottom_toBottomOf="@+id/buttonNext"
+                app:layout_constraintEnd_toStartOf="@+id/buttonNext"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/buttonLeft"></LinearLayout>
+                app:layout_constraintStart_toEndOf="@+id/buttonPrev"></LinearLayout>
 
             <ImageButton
-                android:id="@+id/buttonRight"
+                android:id="@+id/buttonNext"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/gradiant_bar"
+                android:background="@drawable/button_gradient"
+                android:onClick="nextProfile"
                 android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
