--- a/app/src/main/res/drawable/button_gradient_disabled.xml
+++ b/app/src/main/res/drawable/button_gradient_disabled.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     android:useLevel="false">
@@ -9,6 +8,5 @@
         android:endColor="@color/colorend_disabled"
         android:startColor="@color/colorstr_disabled"
         android:type="linear" />
-
+    <corners android:radius="5dp" />
 </shape>
-
