--- a/app/src/main/res/drawable/button_styles.xml
+++ b/app/src/main/res/drawable/button_styles.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#FFFFFF" />
+            <corners android:radius="5dp" />
+            <stroke android:width="3dp" android:color="#555555" />
+        </shape>
+    </item>
 
-    <solid android:color="#FFFFFF" />
-    <corners android:radius="5dp" />
-    <stroke
-        android:width="3dp"
-        android:color="#888888" />
-
-</shape>
+    <item android:state_selected="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#FFFFFF" />
+            <corners android:radius="5dp" />
+            <stroke android:width="3dp" android:color="#555555" />
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#FFFFFF" />
+            <corners android:radius="5dp" />
+            <stroke android:width="3dp" android:color="#888888" />
+        </shape>
+    </item>
+</selector>
