--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/reminders"
+            android:textColor="@android:color/black"
             android:textSize="20sp" />
 
         <ListView
@@ -133,11 +134,11 @@
             android:layout_height="match_parent">
 
             <ImageButton
-                android:id="@+id/buttonLeft"
+                android:id="@+id/buttonPrev"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/gradiant_bar"
+                android:background="@drawable/button_gradient"
                 android:onClick="previousProfile"
                 android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -154,15 +155,15 @@
                 android:layout_marginBottom="8dp"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/buttonRight"
-                app:layout_constraintStart_toEndOf="@+id/buttonLeft"></LinearLayout>
+                app:layout_constraintEnd_toStartOf="@+id/buttonNext"
+                app:layout_constraintStart_toEndOf="@+id/buttonPrev"></LinearLayout>
 
             <ImageButton
-                android:id="@+id/buttonRight"
+                android:id="@+id/buttonNext"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/gradiant_bar"
+                android:background="@drawable/button_gradient"
                 android:onClick="nextProfile"
                 android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
