--- a/app/src/main/res/layout/activity_profile_info.xml
+++ b/app/src/main/res/layout/activity_profile_info.xml
@@ -21,6 +21,7 @@
         tools:layout_editor_absoluteY="39dp" />
 
     <LinearLayout
+        android:id="@+id/layoutProfile"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="15dp"
@@ -61,8 +62,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
                     android:paddingStart="10dp"
+                    android:paddingLeft="10dp"
                     android:paddingTop="10dp"
                     android:paddingEnd="10dp"
                     android:text="Age"
@@ -72,8 +73,7 @@
                     android:id="@+id/textAge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="30" />
+                    android:layout_gravity="center" />
             </LinearLayout>
 
             <LinearLayout
@@ -95,8 +95,7 @@
                     android:id="@+id/textKidsNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="2" />
+                    android:layout_gravity="center" />
             </LinearLayout>
 
             <LinearLayout
@@ -118,8 +117,7 @@
                     android:id="@+id/textBirth"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="09-20-1974" />
+                    android:layout_gravity="center" />
             </LinearLayout>
         </LinearLayout>
 
@@ -128,6 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="@string/information"
+            android:textColor="@android:color/black"
             android:textSize="20sp" />
 
         <ListView
@@ -144,11 +143,12 @@
             android:layout_height="match_parent">
 
             <ImageButton
-                android:id="@+id/buttonLeft"
+                android:id="@+id/buttonPrev"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/gradiant_bar"
+                android:background="@drawable/button_gradient"
+                android:onClick="previousProfile"
                 android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -163,15 +163,16 @@
                 android:layout_marginBottom="8dp"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/buttonRight"
-                app:layout_constraintStart_toEndOf="@+id/buttonLeft"></LinearLayout>
+                app:layout_constraintEnd_toStartOf="@+id/buttonNext"
+                app:layout_constraintStart_toEndOf="@+id/buttonPrev"></LinearLayout>
 
             <ImageButton
-                android:id="@+id/buttonRight"
+                android:id="@+id/buttonNext"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/gradiant_bar"
+                android:background="@drawable/button_gradient"
+                android:onClick="nextProfile"
                 android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
