--- a/app/src/main/res/layout/activity_profiles_list.xml
+++ b/app/src/main/res/layout/activity_profiles_list.xml
@@ -44,7 +44,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="100dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_add_black_24dp" />
+                android:background="@drawable/ic_add_black_24dp"
+                android:onClick="createProfile" />
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
