--- a/app/src/main/res/layout/listed_profiles.xml
+++ b/app/src/main/res/layout/listed_profiles.xml
@@ -3,30 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_weight="11"
     android:clickable="true">
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_gravity="center"
         android:layout_marginLeft="15dp"
+        android:layout_weight="3"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imgListedProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:src="@drawable/doctoricon" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="vertical"
         android:paddingLeft="15dp">
 
         <TextView
-            android:id="@+id/profile_name"
+            android:id="@+id/textProfileName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Mum"
@@ -34,21 +37,21 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/profile_age"
+            android:id="@+id/textProfileAge"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="36 years - 1983/06/23" />
+            android:text="Age - Date of birth" />
 
         <TextView
-            android:id="@+id/profile_info"
+            android:id="@+id/textProfileInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Information" />
 
         <TextView
-            android:id="@+id/profile_next"
+            android:id="@+id/textProfileNext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Calendar - Next vaccionatio..." />
+            android:text="Next appointment on..." />
     </LinearLayout>
 </LinearLayout>
